[package]
name = "fthapar"
version = "0.1.0"
edition = "2021"
authors = ["Anshul Kanwar <anshulkanwar1@gmail.com>"]
description = "Check if a password on webkios is correct or not"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.6", features = ["derive"] }
termion = "*"
